--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,7 +3,7 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font: 112.5%/1.45em 'Poppins', sans-serif;
+  font: 112.5%/1.2em 'Poppins', sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -92,6 +92,20 @@ h1 {
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
   line-height: 1.1;
+}
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 0.85rem;
+  }
+}
+h1.smallSize {
+  font-size: 1.5rem;
+}
+p.smallSize {
+  font-size: 0.85rem;
 }
 mark {
   background-color: #ff0;
@@ -268,9 +282,8 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
   line-height: 1.1;
@@ -283,11 +296,10 @@ h3 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 0;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  font-weight: normal;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
   line-height: 1.1;
@@ -602,4 +614,8 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+.css-cvhtoe-MuiButtonBase-root-MuiListItemButton-root:active, .css-cvhtoe-MuiButtonBase-root-MuiListItemButton-root:hover {
+  background-color: rgba(0, 0, 0, 0);
 }
