--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -142,6 +142,12 @@ img {
 svg {
   color: #734f96;
 }
+.css-i4bv87-MuiSvgIcon-root[data-testid="ArrowRightIcon"] {
+  color: black;
+}
+.css-i4bv87-MuiSvgIcon-root[data-testid="ArrowDropDownIcon"] {
+  color: black;
+}
 svg:not(:root) {
   overflow: hidden;
 }
